// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DevTemplatesOption component > matches the snapshot for desktop view 1`] = `
<DocumentFragment>
  <div
    class="flex w-full rounded-lg border border-gray-300 flex-nowrap mt-4 relative"
    data-testid="template-option"
  >
    <div
      class="overflow-hidden max-w-[86%]"
    >
      <div
        class="whitespace-nowrap shadow-inner flex mt-1 ml-2 flex-col"
        style="height: auto;"
      >
        <div
          class="flex flex-wrap"
        >
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-7lm3m0-MuiChip-root"
              >
                <i
                  class="ci ci-react ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  React
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1izr7bw-MuiChip-root"
              >
                <i
                  class="ci ci-ts-circle ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  TypeScript
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1w1q3jt-MuiChip-root"
              >
                <i
                  class="ci ci-tailwind ci-lg"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  Tailwind CSS
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto text-wrap my-2 max-h-20 description-scrollbar"
        />
      </div>
      <div
        class="absolute top-3 right-2 cursor-pointer"
      >
        <div
          class="hover:bg-gray-700 rounded-full p-1  flex items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
            data-testid="LinkIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DevTemplatesOption component > matches the snapshot for mobile view 1`] = `
<DocumentFragment>
  <div
    class="flex w-full rounded-lg border border-gray-300 flex-nowrap mt-4 relative"
    data-testid="template-option"
  >
    <div
      class="overflow-hidden max-w-[86%]"
    >
      <div
        class="whitespace-nowrap shadow-inner flex mt-1 ml-2 flex-col"
        style="height: auto;"
      >
        <div
          class="flex flex-wrap"
        >
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-7lm3m0-MuiChip-root"
              >
                <i
                  class="ci ci-react ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  React
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1izr7bw-MuiChip-root"
              >
                <i
                  class="ci ci-ts-circle ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  TypeScript
                </span>
              </div>
            </div>
          </div>
          <div
            class="my-1 mb-2"
            data-testid="tec-badge"
          >
            <div>
              <div
                class="MuiChip-root MuiChip-outlined MuiChip-sizeMedium MuiChip-colorDefault MuiChip-outlinedDefault css-1w1q3jt-MuiChip-root"
              >
                <i
                  class="ci ci-tailwind ci-sm"
                />
                <span
                  class="MuiChip-label MuiChip-labelMedium css-3uu4gz-MuiChip-label"
                >
                  Tailwind CSS
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="overflow-auto text-wrap my-2 max-h-20 description-scrollbar"
        />
      </div>
      <div
        class="absolute top-3 right-2 cursor-pointer"
      >
        <div
          class="hover:bg-gray-700 rounded-full p-1  flex items-center justify-center"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
            data-testid="LinkIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1M8 13h8v-2H8zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="absolute -bottom-3 right-3 cursor-pointer bg-app-grey rounded-full"
    >
      <span
        aria-label="Show all tools"
        class="ml-auto cursor-pointer hover:opacity-70 flex items-center"
        data-mui-internal-clone-element="true"
      >
        <div
          class="flex items-center justify-center rounded-full text-sm "
        >
          <span
            class="text-white rounded-full flex flex-nowrap"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
